--- a/eclipse-workspace/GrocceryApplication/test-output/emailable-report.html
+++ b/eclipse-workspace/GrocceryApplication/test-output/emailable-report.html
@@ -8,12 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Grouping</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">22,748</td><td>smoke</td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">18,549</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Grouping</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testscripts.LoginTest</td><td><a href="#m0">verifyWhetherUserIsAbleToLoginWithInValidUserNameandInValidPassword</a></td><td rowspan="1">1765468377824</td><td rowspan="1">732</td></tr><tr class="passedeven"><td><a href="#m1">verifyWhetherUserIsAbleToLoginWithValidCredential</a></td><td rowspan="1">1765468372069</td><td rowspan="1">2865</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testscripts.HomeTest</td><td><a href="#m0">verifyWhetherUserIsAbleToLoginWithValidCredential</a></td><td rowspan="1">1766164630245</td><td rowspan="1">4151</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testscripts.LoginTest#verifyWhetherUserIsAbleToLoginWithInValidUserNameandInValidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testscripts.LoginTest#verifyWhetherUserIsAbleToLoginWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testscripts.HomeTest#verifyWhetherUserIsAbleToLoginWithValidCredential</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
